[gd_scene load_steps=17 format=3 uid="uid://dxodjse6yt7cd"]

[ext_resource type="Script" path="res://scripts/projector.gd" id="1_1a7v7"]
[ext_resource type="Script" path="res://scripts/resources/cone_shape_3d.gd" id="1_2s65s"]
[ext_resource type="Script" path="res://scripts/flickering_light.gd" id="2_4nl2w"]
[ext_resource type="PackedScene" uid="uid://domo6gog5jdqh" path="res://resources/models/projector/Projector.blend" id="2_nkggn"]
[ext_resource type="Material" uid="uid://cd8gshepxty30" path="res://resources/models/projector/Projector1.tres" id="3_r3g6p"]
[ext_resource type="PackedScene" uid="uid://sx2h6j67s8yu" path="res://scenes/components/hover_component.tscn" id="4_dwpac"]
[ext_resource type="Texture2D" uid="uid://b77a0cgdtcwfe" path="res://resources/models/projector/Projector2-albedo.png" id="4_oq5yw"]
[ext_resource type="Texture2D" uid="uid://b3n56y8ewq1ql" path="res://resources/models/projector/Projector2-normal.png" id="5_bm11s"]
[ext_resource type="PackedScene" uid="uid://mq05dcn7se8o" path="res://scenes/components/ui_hint_component.tscn" id="5_bq60w"]
[ext_resource type="PackedScene" uid="uid://d0e8xg2vjvj2m" path="res://scenes/components/grab_component.tscn" id="6_l06f8"]
[ext_resource type="Texture2D" uid="uid://dx7rxo85gar83" path="res://resources/models/projector/Projector2-orm.png" id="6_rbltf"]
[ext_resource type="AudioStream" uid="uid://dc5qwixlnybli" path="res://resources/sounds/button_on.wav" id="7_4vfih"]
[ext_resource type="AudioStream" uid="uid://ddm55hv2wmh3u" path="res://resources/sounds/button_off.wav" id="8_rfpyu"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5dlr2"]
height = 1.6
radius = 0.418647

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_l8el1"]
albedo_texture = ExtResource("4_oq5yw")
orm_texture = ExtResource("6_rbltf")
normal_enabled = true
normal_texture = ExtResource("5_bm11s")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_c1pjy"]
points = PackedVector3Array(0.05, -2.5, 0, 2.9, 2.5, 0, 0.0353553, -2.5, 0.0353553, 2.05061, 2.5, 2.05061, 3.06152e-18, -2.5, 0.05, 1.77568e-16, 2.5, 2.9, -0.0353553, -2.5, 0.0353553, -2.05061, 2.5, 2.05061, -0.05, -2.5, 6.12303e-18, -2.9, 2.5, 3.55136e-16, -0.0353553, -2.5, -0.0353553, -2.05061, 2.5, -2.05061, -9.18455e-18, -2.5, -0.05, -5.32704e-16, 2.5, -2.9, 0.0353553, -2.5, -0.0353553, 2.05061, 2.5, -2.05061)
script = ExtResource("1_2s65s")
top_radius = 2.9
bottom_radius = 0.05
height = 5.0
radial_segments = 8

[node name="Projector" type="RigidBody3D" groups=["button", "grabbable"]]
collision_layer = 21
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_1a7v7")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0388468, -0.05)
shape = SubResource("CylinderShape3D_5dlr2")

[node name="Projector" parent="." instance=ExtResource("2_nkggn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.761088, 0)

[node name="Cube" parent="Projector/Tripod" index="0"]
surface_material_override/0 = ExtResource("3_r3g6p")

[node name="Plane" parent="Projector/Tripod/Cube" index="0"]
surface_material_override/0 = SubResource("ORMMaterial3D_l8el1")

[node name="Wheel1" parent="Projector/Tripod" index="4"]
transform = Transform3D(1, 0, 0, 0, -0.459389, -0.888236, 0, 0.888236, -0.459389, 0.0311643, 0.114309, -0.148053)

[node name="Wheel2" parent="Projector/Tripod" index="5"]
transform = Transform3D(1, 0, 0, 0, -0.459389, -0.888236, 0, 0.888236, -0.459389, 0.0311643, 0.456265, -0.143457)

[node name="Light" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223144, 0.624247, -0.147923)
light_energy = 0.93757
shadow_enabled = true
distance_fade_enabled = true
spot_attenuation = 0.329878
spot_angle = 30.0
spot_angle_attenuation = 0.554785
script = ExtResource("2_4nl2w")
octaves = 2
lacunarity = 3.0

[node name="Hitbox" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.394847, -2.824)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0223144, -0.165648, 0.229863)
shape = SubResource("ConvexPolygonShape3D_c1pjy")

[node name="HoverComponent" parent="." instance=ExtResource("4_dwpac")]

[node name="UiHintComponentGrab" parent="." instance=ExtResource("5_bq60w")]
hint_type = 2
hud_type = 1
hint = "Grab"
show = false

[node name="UiHintComponentDrop" parent="." instance=ExtResource("5_bq60w")]
hint_type = 2
hud_type = 1
hint = "Drop"
show = false

[node name="UiHintComponentUse" parent="." instance=ExtResource("5_bq60w")]
hint_type = 1
hud_type = 1
hint = "Toggle"
show = false

[node name="GrabComponent" parent="." instance=ExtResource("6_l06f8")]
angular_damp = 100.0
rotate_speed_multiplier = 10.0

[node name="UiHintComponentThrow" parent="." instance=ExtResource("5_bq60w")]
hint_type = 3
hud_type = 1
hint = "Throw"
show = false

[node name="UiHintComponentRotateLeft" parent="." instance=ExtResource("5_bq60w")]
hint_type = 6
hud_type = 1
hint = "Rotate Left"
show = false

[node name="UiHintComponentRotateRight" parent="." instance=ExtResource("5_bq60w")]
hint_type = 7
hud_type = 1
hint = "Rotate Right"
show = false

[node name="SoundOn" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0361931, 0.703691, -0.0505965)
stream = ExtResource("7_4vfih")

[node name="SoundOff" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0361931, 0.703691, -0.0505965)
stream = ExtResource("8_rfpyu")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="hover_entered" from="HoverComponent" to="UiHintComponentGrab" method="set_show"]
[connection signal="hover_entered" from="HoverComponent" to="UiHintComponentUse" method="set_show"]
[connection signal="hover_exited" from="HoverComponent" to="UiHintComponentGrab" method="set_hide"]
[connection signal="hover_exited" from="HoverComponent" to="UiHintComponentUse" method="set_hide"]
[connection signal="grab_begin" from="GrabComponent" to="UiHintComponentGrab" method="set_hide"]
[connection signal="grab_begin" from="GrabComponent" to="UiHintComponentDrop" method="set_show"]
[connection signal="grab_begin" from="GrabComponent" to="UiHintComponentThrow" method="set_show"]
[connection signal="grab_begin" from="GrabComponent" to="UiHintComponentRotateLeft" method="set_show"]
[connection signal="grab_begin" from="GrabComponent" to="UiHintComponentRotateRight" method="set_show"]
[connection signal="grab_end" from="GrabComponent" to="UiHintComponentDrop" method="set_hide"]
[connection signal="grab_end" from="GrabComponent" to="UiHintComponentThrow" method="set_hide"]
[connection signal="grab_end" from="GrabComponent" to="UiHintComponentRotateLeft" method="set_hide"]
[connection signal="grab_end" from="GrabComponent" to="UiHintComponentRotateRight" method="set_hide"]

[editable path="Projector"]
